Update for new postgres driver.

--- a/build.xml
+++ b/build.xml
@@ -76,7 +76,8 @@
     <fileset dir="${thirdparty.lib}" includes="*.jar" />
     <fileset dir="${thirdparty.lib}" includes="*.zip" />      
     <fileset dir="${thirdparty.lib}/oracle_jdbc" includes="*.jar" />
-    <fileset dir="${thirdparty.lib}/postgresql" includes="postgresql-8.0-312.jdbc3.jar"/>
+    <fileset dir="${thirdparty.lib}/postgresql"
+             includes="postgresql-8.0-317.jdbc3.jar"/>
     <fileset dir="${thirdparty.lib}/mysql_jdbc" includes="mysql*.jar"/>
     <fileset dir="${thirdparty.lib}/mx4j" includes="*.jar" />
     <fileset dir="${xdoclet.lib}" includes="*.jar" />
