Update references to hyperic.com

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -62,7 +62,7 @@ common.resource.link.Edit=Edit General Properties
 
 common.field.value=Value
 
-common.url.help=http://hq.hyperic.net:8080/confluence/display/DOCSHQ27/
+common.url.help=http://support.hyperic.com/confluence/display/DOCSHQ27/
 
 common.error.invalid.oid=OID specified is invalid, please enter OID in form of 1.2.3.4
 
@@ -128,7 +128,7 @@ about.Copyright.Label=&copy; Copyright notice:
 about.Copyright.Content=All rights reserved
 about.Copyright.LinkText=See complete copyright information
 about.MoreInfo.Label=For more information, go to:
-about.MoreInfo.LinkSales=sales@hyperic.net
+about.MoreInfo.LinkSales=sales@hyperic.com
 about.MoreInfo.LinkSupport=Hyperic HQ Documentation
 about.MoreInfo.LinkForums=Hyperic Forums
 
@@ -600,7 +600,7 @@ dash.home.Problems.solution.invalidConfig.2=Verify the configuration
 
 # A serious error just trying to figure out what the real error was
 dash.home.Problems.problem.internalDiagError=Error while performing diagnosis: {0}
-dash.home.Problems.solution.internalDiagError=Serious error: email the HQ server logfile (in logs/server.log) to <a href="mailto:support@hyperic.net?subject=Internal diagnostic error">Hyperic support</a>
+dash.home.Problems.solution.internalDiagError=Serious error: email the HQ server logfile (in logs/server.log) to <a href="mailto:support@hyperic.com?subject=Internal diagnostic error">Hyperic support</a>
 
 # Metric collection problems - platform
 dash.home.Problems.problem.agentDown=Agent not running
@@ -608,9 +608,9 @@ dash.home.Problems.solution.agentDown=Start the agent
 dash.home.Problems.problem.agentNetlinkDown=Agent machine is not responding on {0}
 dash.home.Problems.solution.agentNetlinkDown=Fix broken network link or re-setup agent if its IP address has changed
 dash.home.Problems.problem.agentHosed=Agent unable to collect platform metrics
-dash.home.Problems.solution.agentHosed=Serious error: email agent's logfile (in log/agent.log) to <a href="mailto:support@hyperic.net?subject=Agent not collecting platform metrics">Hyperic support</a>
+dash.home.Problems.solution.agentHosed=Serious error: email agent's logfile (in log/agent.log) to <a href="mailto:support@hyperic.com?subject=Agent not collecting platform metrics">Hyperic support</a>
 dash.home.Problems.problem.agentHosedAtServer=Error reading agent configuration in HQ inventory: {0}
-dash.home.Problems.solution.agentHosedAtServer=Serious error: email the HQ server logfile (in logs/server.log) to <a href="mailto:support@hyperic.net?subject=Error reading agent config from HQ inventory">Hyperic support</a>
+dash.home.Problems.solution.agentHosedAtServer=Serious error: email the HQ server logfile (in logs/server.log) to <a href="mailto:support@hyperic.com?subject=Error reading agent config from HQ inventory">Hyperic support</a>
 
 # Metric collection problems - server
 dash.home.Problems.problem.serverMisconfigured=Server is configured incorrectly
