Update default JBoss zipfile to 4.0.3 SP1.

--- a/etc/build.properties
+++ b/etc/build.properties
@@ -11,7 +11,7 @@ release.prefix=2.7.
 
 pgsql.dir=${hq.home}/../pgsql
 jre.dir=${hq.home}/../jres
-jboss.zip=${hq.home}/../jboss-4.0.2-bin.zip
+jboss.zip=${hq.home}/../jboss-4.0.3SP1.zip
 ant.bz2=${hq.home}/../apache-ant-1.6.5-bin.tar.bz2
 
 #################################################################
