[HQ-359] Add message string for event log purging

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -485,7 +485,7 @@ admin.settings.DisableGuide=Disable HQ Guide for All Users (restart the HQ serve
 admin.settings.DataMangerConfigTab=Data Manager Configuration Properties
 admin.settings.DataOlderThanLabel=Condense Data Older Than:
 admin.settings.CondenseToLabel=Condense To:
-admin.settings.PurgeOlderThanLabel=Delete Detailed Data Older Than:
+admin.settings.PurgeOlderThanLabel=Delete Detailed Metric Data Older Than:
 admin.settings.DataMaintInterval=Run Database Maintenance Every:
 
 admin.settings.BaselineConfigTab=Automatic Baseline Configuration Properties
@@ -496,6 +496,7 @@ admin.settings.BaselineMinSet=Baseline Minimum Data Points:
 admin.settings.RtDataPurge=Delete Response Time Data Older Than:
 admin.settings.AlertPurge=Delete Alerts Older Than:
 admin.settings.Reindex=Reindex Metric Data Tables Nightly:
+admin.settings.EventLogPurge=Delete Events and Logs Older Than:
 
 admin.settings.Day=day
 admin.settings.Days=days
