[HHQ-40] Check session variable to see if we should display an error message regarding the lack of xlibs

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -121,6 +121,7 @@ error.Error.RootCause=Root Cause:
 
 #
 error.PreviousRequestEtc=Previous request is currently being processed.  Please wait for response before proceeding.
+error.NoXLibInstalled=Image cannot be displayed.  HQ Server requires X libraries to create charts and other graphics in the user interface.  Please follow these <a href="http://support.hyperic.com/confluence/display/DOCSHQ27/Install+Guide#InstallGuide-Other" target="_blank">installation instructions</a>.
 
 # About Page
 about.Title=About Hyperic HQ
