hibernate hbm file conversion and ant integration

--- a/etc/build.properties
+++ b/etc/build.properties
@@ -77,6 +77,13 @@ server.ldap.bindPW=
 # on new schema changes, things may break.
 hq.schema.target.version=LATEST
 
+# For hibernate DDL generator: The default statement delimiter
+hq.schema.statement.delimiter=;
+
+# For hibernate DDL generator: if true, then perform operations directly in
+# the database
+hq.schema.export=true
+
 # HighAvail setting.  This must be one of the following:
 #   standalone            : non-clustered server
 #   cluster-master        : cluster master (one of these per cluster)
@@ -99,3 +106,28 @@ server.tablespace.lg_data=DEFAULT
 server.tablespace.lg_idx=DEFAULT
 server.tablespace.sm_data=DEFAULT
 server.tablespace.sm_idx=DEFAULT
+
+#
+# java compiler options
+hq.javac.source=1.4
+hq.javac.optimize=off
+hq.javac.debug=on
+
+######################################
+# Hibernate options
+#
+hibernate.cache.use_query_cache=no
+hibernate.cache.use_second_level_cache=no
+hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
+
+hibernate.max_fetch_depth=1
+hibernate.default_batch_fetch_size=4
+hibernate.default_entity_mode=pojo
+hibernate.order_updates=true
+hibernate.generate_statistics=true
+
+# JBOSS J2EE container integration
+hibernate.session_factory_name=java:/HibernateSessionFactory
+hibernate.current_session_context_class=jta
+hibernate.transaction.manager_lookup_class=org.hibernate.transaction.JBossTransactionManagerLookup
+hibernate.transaction.factory_class=org.hibernate.transaction.JTATransactionFactory
