DAO for appdef first class objects.  base class for mockejb unit testing (requires cactus and must use JDK 1.4).  Please review comments on the MockBeanTestBase on limitations/usage info

--- a/etc/build.properties
+++ b/etc/build.properties
@@ -123,6 +123,8 @@ hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
 hibernate.max_fetch_depth=1
 hibernate.default_batch_fetch_size=4
 hibernate.default_entity_mode=pojo
+
+# order updates to reduce deadlocks
 hibernate.order_updates=true
 hibernate.generate_statistics=true
 
