--- a/build.xml
+++ b/build.xml
@@ -76,7 +76,7 @@
   <path id="alljars">
     <path refid="pdknative" />
     <fileset dir="${lather.lib}" includes="lather.jar" />
-    <fileset dir="${thirdparty.lib}" includes="*.jar" excludes="aspectj*.jar,cactus*.jar"/>
+    <fileset dir="${thirdparty.lib}" includes="*.jar" excludes="aspectj*.jar,cactus*.jar,mockejb.jar,mockrunner-ejb.jar"/>
     <fileset dir="${thirdparty.lib}" includes="*.zip" />      
     <fileset dir="${thirdparty.lib}/oracle_jdbc" includes="*.jar" />
     <fileset dir="${thirdparty.lib}/postgresql"
@@ -91,6 +91,13 @@
     <fileset dir="${tomcat.home}" includes="*.jar" />
     <fileset dir="${hq.home}/plugins" includes="**/build-lib/*.jar" />
     <fileset dir="${hq.home}/plugins" includes="**/lib/*.jar" />
+  </path>
+
+  <path id="testjars">
+    <path refid="alljars" />
+    <path location="${thirdparty.lib}/cactus-13-1.6.1.jar" />
+    <path location="${thirdparty.lib}/mockejb.jar" />
+    <path location="${thirdparty.lib}/mockrunner-ejb.jar" />
   </path>
 
   <path id="remotejars">    
@@ -185,8 +192,7 @@
            debug="${hq.javac.debug}"
            source="${hq.javac.source}">
       <classpath>
-        <path refid="alljars"/>
-        <path location="${thirdparty.lib}/cactus-13-1.6.1.jar" />
+        <path refid="testjars"/>
         <path location="${build.dir}/classes"/>
       </classpath>
       <src>
@@ -408,7 +414,10 @@
       <fileset dir="${thirdparty.lib}" >
         <include name="aspectjrt-1.2.1.jar" />
         <include name="cactus-13-1.6.1.jar" />
+        <include name="mockejb.jar" />
+        <include name="jakarata-oro-2.0.7.jar" />
         <include name="junit.jar" />
+        <include name="hibernate/cglib-2.1.3.jar" />
         <include name="commons-httpclient-2.0.jar" />
       </fileset>
     </copy>
@@ -1417,6 +1426,9 @@
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/junit.jar"/>
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/aspectjrt-*.jar" />
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/cactus-*.jar" />
+    <delete file="${ear.dir}/hq.war/WEB-INF/lib/mockejb.jar" />
+    <delete file="${ear.dir}/hq.war/WEB-INF/lib/mockrunner-ejb.jar" />
+    <delete file="${ear.dir}/hq.war/WEB-INF/lib/jakarta-oro-*.jar" />
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/strutstest.jar" />
     <delete file="${ear.dir}/hq.war/WEB-INF/lib/commons-httpclient-2.0.jar" />    
     <delete file="${ear.dir}/hq.war/WEB-INF/classes/cactus.properties"/>
