--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -128,6 +128,17 @@
 <!--GENERATED_JSPS-->
 <!-- END GENERATED JSPS -->
 
+  <!-- Cactus Redirectory mapping -->
+  <servlet-mapping>
+    <servlet-name>ServletRedirector</servlet-name>
+    <url-pattern>/ServletRedirector</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>JspRedirector</servlet-name>
+    <url-pattern>/JspRedirector</url-pattern>
+  </servlet-mapping>
+  <!-- end cactus redirector mapping -->
+
   <servlet-mapping>
     <servlet-name>availability</servlet-name>
     <url-pattern>/resource/Availability</url-pattern>
