add hyperic interceptor for mutiple purpose.  The first use case is to set creation and modified times for appdef entities

--- a/etc/build.properties
+++ b/etc/build.properties
@@ -116,6 +116,10 @@ hq.javac.debug=on
 ######################################
 # Hibernate options
 #
+# interceptor
+hibernate.util.interceptor_class=org.hyperic.hibernate.HypericInterceptor
+
+#
 hibernate.cache.use_query_cache=no
 hibernate.cache.use_second_level_cache=no
 hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
