--- a/build.xml
+++ b/build.xml
@@ -859,6 +859,8 @@
     <hqplugin name="ntds"/>
 
     <hqplugin name="memcached"/>
+
+    <hqplugin name="mule"/>
   </target>
   
   <!-- Copy plugins -->
