Pass system properties to JVM running the unit tests.  This allows developer to override the database settings.
Note: for those of you who rely on default of "hq" for database, username, and
password, you will have to add hq.jdbc.name, hq.jdbc.user, and hq.jdbc.password
properties to your build.properties.

--- a/build.xml
+++ b/build.xml
@@ -178,6 +178,10 @@
           <include name="**/*Test.java"/>
         </fileset>
       </batchtest>
+      <sysproperty key="hq.jdbc.name" value="${hq.jdbc.name}"/>
+      <sysproperty key="hq.jdbc.user" value="${hq.jdbc.user}"/>
+      <sysproperty key="hq.jdbc.password" value="${hq.jdbc.password}"/>
+      <sysproperty key="hq.jdbc.server" value="${hq.jdbc.server}"/>
     </junit>
   </target>
     
