--- a/etc/build.properties
+++ b/etc/build.properties
@@ -20,6 +20,8 @@ hq.jdbc.url=jdbc:postgresql://localhost:5432/hqdb
 hq.jdbc.driver=org.postgresql.Driver
 hq.jdbc.user=hqadmin
 hq.jdbc.password=hqadmin
+hq.jdbc.name=hqdb
+hq.jdbc.server=localhost
 hq.server.ds-mapping=PostgreSQL
 
 # Default oracle configuration - uncomment to enable
