--- a/build.xml
+++ b/build.xml
@@ -178,6 +178,8 @@
           <include name="**/*Test.java"/>
         </fileset>
       </batchtest>
+      <sysproperty key="hq.server.ds-mapping" value="${hq.server.ds-mapping}"/>
+      <sysproperty key="hq.jdbc.url" value="${hq.jdbc.url}"/>
       <sysproperty key="hq.jdbc.name" value="${hq.jdbc.name}"/>
       <sysproperty key="hq.jdbc.user" value="${hq.jdbc.user}"/>
       <sysproperty key="hq.jdbc.password" value="${hq.jdbc.password}"/>
