Add src directory to build path, since loading version.properties is having some classloader issues

--- a/build.xml
+++ b/build.xml
@@ -168,6 +168,7 @@
         <path refid="alljars"/>
         <path refid="testjars"/>
         <path location="${build.dir}/classes" />
+        <path location="${build.dir}/src" />            
         <path>
           <fileset dir="${thirdparty.lib}" includes="*.jar" />
         </path>
