We must specify the protocol version otherwise DBsetup will do something stupid (insert integers wrapped in quotes), which will break

--- a/etc/build.properties
+++ b/etc/build.properties
@@ -16,7 +16,7 @@ ant.bz2=${hq.home}/../apache-ant-1.6.5-bin.tar.bz2
 #
 #################################################################
 hq.server.datasource=java:/HypericDS
-hq.jdbc.url=jdbc:postgresql://localhost:5432/hqdb
+hq.jdbc.url=jdbc:postgresql://localhost:5432/hqdb?protocolVersion=2
 hq.jdbc.driver=org.postgresql.Driver
 hq.jdbc.user=hqadmin
 hq.jdbc.password=hqadmin
