--- a/build.xml
+++ b/build.xml
@@ -161,7 +161,16 @@
     <property name="init-taskdefs.notrequired" value="true"/>
   </target>
 
-  <target name="test" depends="init,init-taskdefs">
+  <!-- test-init is used to setup properties for the tests.  Needed to
+       override things for MockEJB -->
+  <target name="test-init">
+    <property name="hibernate.transaction.manager_lookup_class"
+              value=""/>
+    <property name="hq.jta.UserTransaction"
+              value="javax.transaction.UserTransaction"/>
+  </target>
+
+  <target name="test" depends="test-init,init,init-taskdefs">
     <junit reloading="no" fork="no" printsummary="yes" haltonerror="no">
       <classpath>
         <path refid="alljars"/>
