--- a/etc/build.properties
+++ b/etc/build.properties
@@ -139,3 +139,6 @@ hibernate.session_factory_name=java:/HibernateSessionFactory
 hibernate.current_session_context_class=jta
 hibernate.transaction.manager_lookup_class=org.hibernate.transaction.JBossTransactionManagerLookup
 hibernate.transaction.factory_class=org.hibernate.transaction.JTATransactionFactory
+
+# Where JUnit results get placed
+junitResults.dir=${basedir}/junit_results
