--- a/etc/build.properties
+++ b/etc/build.properties
@@ -12,7 +12,7 @@ jboss.zip=${hq.home}/../jboss-4.0.3SP1.zip
 ant.bz2=${hq.home}/../apache-ant-1.6.5-bin.tar.bz2
 
 #################################################################
-# Database settigs
+# Database settings
 #
 #################################################################
 hq.server.datasource=java:/HypericDS
