hibernate configuration settings

--- a/etc/build.properties
+++ b/etc/build.properties
@@ -127,12 +127,23 @@ hibernate.cache.use_second_level_cache=no
 hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
 
 hibernate.max_fetch_depth=1
-hibernate.default_batch_fetch_size=4
+hibernate.default_batch_fetch_size=8
 hibernate.default_entity_mode=pojo
 
 # order updates to reduce deadlocks
 hibernate.order_updates=true
+
+# hibernate statistics
 hibernate.generate_statistics=true
+
+# use batched DML for automatically versioned data
+hibernate.jdbc.batch_versioned_data=true
+
+# Enable? JDBC3 PreparedStatement.getGeneratedKeys()
+hibernate.jdbc.use_get_generated_keys=true
+
+# JDBC2 batch updates
+hibernate.jdbc.batch_size=30
 
 # JBOSS J2EE container integration
 hibernate.session_factory_name=java:/HibernateSessionFactory
