--- a/build.xml
+++ b/build.xml
@@ -103,6 +103,11 @@
     <path location="${thirdparty.lib}/mockrunner-ejb.jar" />
   </path>
 
+  <path id="emma.lib">
+    <pathelement location="${thirdparty.lib}/emma.jar" />
+    <pathelement location="${thirdparty.lib}/emma_ant.jar" />
+  </path>
+
   <path id="remotejars">    
     <path refid="alljars" />
     <fileset dir="${webapp.home}/WEB-INF/lib" includes="*.jar" />
@@ -173,12 +178,28 @@
   </target>
 
   <target name="test" depends="init,init-taskdefs">
+
+    <taskdef resource="emma_ant.properties" classpathref="emma.lib" />
+
+    <delete dir="${build.dir}/classes-instrumented" />
+    <mkdir dir="${build.dir}/classes-instrumented" />
+    <emma>
+      <instr instrpath="${build.dir}/classes"
+             outdir="${build.dir}/classes-instrumented"
+             merge="true">
+
+        <!-- exclude tests -->
+        <filter excludes="*Test*" />
+      </instr>
+    </emma>
+
     <mkdir dir="${junitResults.dir}"/>
     <junit reloading="no" fork="no" printsummary="yes" haltonerror="no">
       <classpath>
         <path refid="alljars"/>
         <path refid="testjars"/>
-        <path location="${build.dir}/classes" />
+        <path location="${build.dir}/classes-instrumented" />
+        <path location="${build.dir}/classes" /> <!-- For test classes -->
         <path location="${build.dir}/src" />            
         <path>
           <fileset dir="${thirdparty.lib}" includes="*.jar" />
@@ -199,8 +220,26 @@
       <sysproperty key="hq.jdbc.password" value="${hq.jdbc.password}"/>
       <sysproperty key="hq.jdbc.server" value="${hq.jdbc.server}"/>
     </junit>
+
+    <echo></echo>
+    <echo>Coverage data has been generated, run 'ant coverage' to generate the report</echo>
+    <echo></echo>
+
   </target>
-    
+ 
+  <target name="coverage">
+    <mkdir dir="${basedir}/coverage"/>
+
+   <taskdef resource="emma_ant.properties" classpathref="emma.lib" />
+
+    <emma>
+      <report sourcepath="${basedir}/src">
+        <infileset dir="." includes="coverage.*" />
+        <html />  
+      </report>
+    </emma>
+  </target>
+ 
   <!-- ==================== Compile java sources ==================== -->
   <target name="compile" description="Compile sources" 
           depends="init">
