--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -40,4 +40,4 @@ hibernate.jdbc.batch_size=30
 hibernate.session_factory_name=java:/HibernateSessionFactory
 hibernate.current_session_context_class=jta
 hibernate.transaction.manager_lookup_class=org.hibernate.transaction.JBossTransactionManagerLookup
-hibernate.transaction.factory_class=org.hibernate.transaction.JTATransactionFactory
+hibernate.transaction.factory_class=org.hibernate.transaction.CMTTransactionFactory
