Add metric data export to charting pages.

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2141,6 +2141,7 @@ resource.common.monitor.visibility.metricsToolbar.SwitchToSimpleBtn=Switch to Si
 resource.common.monitor.visibility.NewAlertLink=Define New Alert
 resource.common.monitor.visibility.SaveChartToDash=Save Chart to Dashboard
 resource.common.monitor.visibility.Back2Resource=Back to Resource
+resource.common.monitor.visibility.ExportLink=Export to CSV
 
 resource.common.monitor.visibility.MemberTH=Resource
 
