--- a/build.xml
+++ b/build.xml
@@ -177,29 +177,41 @@
     <property name="init-taskdefs.notrequired" value="true"/>
   </target>
 
-  <target name="test" depends="init,init-taskdefs">
-
+  <!-- Instrument classes directory inplace with emma -->
+  <target name="instrument" depends="init,init-taskdefs">
     <taskdef resource="emma_ant.properties" classpathref="emma.lib" />
 
-    <delete dir="${build.dir}/classes-instrumented" />
-    <mkdir dir="${build.dir}/classes-instrumented" />
     <emma>
       <instr instrpath="${build.dir}/classes"
-             outdir="${build.dir}/classes-instrumented"
-             merge="true">
+             mode="overwrite">
 
         <!-- exclude tests -->
         <filter excludes="*Test*" />
       </instr>
     </emma>
+  </target>
+
+ <target name="coverage">
+    <mkdir dir="${basedir}/coverage"/>
+
+   <taskdef resource="emma_ant.properties" classpathref="emma.lib" />
+
+    <emma>
+      <report sourcepath="${basedir}/src">
+        <infileset dir="." includes="coverage.*" />
+        <html />
+      </report>
+    </emma>
+  </target>
+
+  <target name="test" depends="init,init-taskdefs">
 
     <mkdir dir="${junitResults.dir}"/>
     <junit reloading="no" fork="no" printsummary="yes" haltonerror="no">
       <classpath>
         <path refid="alljars"/>
         <path refid="testjars"/>
-        <path location="${build.dir}/classes-instrumented" />
-        <path location="${build.dir}/classes" /> <!-- For test classes -->
+        <path location="${build.dir}/classes" />
         <path location="${build.dir}/src" />            
         <path>
           <fileset dir="${thirdparty.lib}" includes="*.jar" />
@@ -221,23 +233,6 @@
       <sysproperty key="hq.jdbc.server" value="${hq.jdbc.server}"/>
     </junit>
 
-    <echo></echo>
-    <echo>Coverage data has been generated, run 'ant coverage' to generate the report</echo>
-    <echo></echo>
-
-  </target>
- 
-  <target name="coverage">
-    <mkdir dir="${basedir}/coverage"/>
-
-   <taskdef resource="emma_ant.properties" classpathref="emma.lib" />
-
-    <emma>
-      <report sourcepath="${basedir}/src">
-        <infileset dir="." includes="coverage.*" />
-        <html />  
-      </report>
-    </emma>
   </target>
  
   <!-- ==================== Compile java sources ==================== -->
