Move Recently Added Resources portlet to narrow column

--- a/web/WEB-INF/DefaultUserPreferences.properties
+++ b/web/WEB-INF/DefaultUserPreferences.properties
@@ -40,9 +40,9 @@
 
 .dashContent.charts=
 
-.dashcontent.portal.portlets.first=|.dashContent.searchResources|.dashContent.savedCharts|.dashContent.summaryCounts
+.dashcontent.portal.portlets.first=|.dashContent.searchResources|.dashContent.savedCharts|.dashContent.recentlyApproved|.dashContent.summaryCounts
 
-.dashcontent.portal.portlets.second=|.dashContent.autoDiscovery|.dashContent.recentlyApproved|.dashContent.resourceHealth|.dashContent.criticalAlerts|.dashContent.recentResources
+.dashcontent.portal.portlets.second=|.dashContent.autoDiscovery|.dashContent.resourceHealth|.dashContent.criticalAlerts|.dashContent.recentResources
 
 .resource.common.monitor.visibility.favoriteMetrics.platform=
 .resource.common.monitor.visibility.favoriteMetrics.server=
