--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -14,8 +14,9 @@ hibernate.util.interceptor_class=org.hyperic.hibernate.HypericInterceptor
 
 #
 hibernate.cache.use_query_cache=no
-hibernate.cache.use_second_level_cache=no
-hibernate.cache.provider_class=org.hibernate.cache.NoCacheProvider
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.provider_class=net.sf.ehcache.hibernate.EhCacheProvider
+net.sf.ehcache.configurationResourceName=META-INF/ehcache.xml
 
 hibernate.max_fetch_depth=1
 hibernate.default_batch_fetch_size=8
