--- a/build.xml
+++ b/build.xml
@@ -49,7 +49,7 @@
   <!-- Thirdparty libs -->
   <property name="thirdparty.lib" location="thirdparty/lib"/>
   <property name="xdoclet.lib" location="${thirdparty.lib}/xdoclet"/>
-  <property name="hibernate.lib" location="${thirdparty.lib}/hibernate"/>
+  <property name="hibernate_lib" location="${thirdparty.lib}/hibernate"/>
 
   <property name="webapp.home" location="${hq.home}/web" />
   <property name="ear.dir" location="${build.dir}/hq.ear" />
@@ -88,7 +88,7 @@
     <fileset dir="${thirdparty.lib}/mysql_jdbc" includes="mysql*.jar"/>
     <fileset dir="${thirdparty.lib}/mx4j" includes="*.jar" />
     <fileset dir="${xdoclet.lib}" includes="*.jar" />
-    <fileset dir="${hibernate.lib}" includes="*.jar" />
+    <fileset dir="${hibernate_lib}" includes="*.jar" />
     <fileset dir="${jboss.home}/server/default/lib" includes="*.jar" />
     <fileset dir="${jboss.home}/lib" includes="*.jar" />
     <fileset dir="${jboss.home}/client" includes="*.jar" />
@@ -417,7 +417,7 @@
       <fileset dir="${build.dir}/lib" >
         <include name="jxla.jar" />
       </fileset>
-      <fileset dir="${hibernate.lib}">
+      <fileset dir="${hibernate_lib}">
         <include name="antlr-2.7.6rc1.jar" />
         <include name="asm-attrs.jar" />
         <include name="asm.jar" />
