--- a/build.xml
+++ b/build.xml
@@ -418,7 +418,7 @@
         <include name="jxla.jar" />
       </fileset>
       <fileset dir="${hibernate_lib}">
-        <include name="antlr-2.7.6rc1.jar" />
+        <include name="antlr-2.7.6.jar" />
         <include name="asm-attrs.jar" />
         <include name="asm.jar" />
         <include name="cglib-2.1.3.jar" />
