Add new string property for TOOLS MENU

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -833,6 +833,7 @@ resource.hub.legend.suspended=Suspended
 resource.common.confirm.ResourcesRemoved=The selected resources have been removed. 
 
 resource.navmap.linktext=MAP
+resource.toolsmenu.text=TOOLS MENU
 
 # RESOURCE GENERAL ERRORS
 resource.common.error.ResourceNotFound=The specified resource does not exist.
