set additional hibernate config to run hibernate-tools

--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -33,6 +33,9 @@ hibernate.jdbc.batch_versioned_data=true
 # Enable? JDBC3 PreparedStatement.getGeneratedKeys()
 hibernate.jdbc.use_get_generated_keys=true
 
+# JPA compliance
+hibernate.query.jpaql_strict_compliance=false
+
 # JDBC2 batch updates
 hibernate.jdbc.batch_size=30
 
