--- a/etc/product.properties
+++ b/etc/product.properties
@@ -1,6 +1,10 @@
 # Specify the validator class for validating configurations
 hyperic.hq.bizapp.configValidator=org.hyperic.hq.bizapp.server.session.ConfigValidatorImpl
 
+#enables log/config track ConfigSchema in the MeasurementPluginManager
+plugin.log_track.supported=true
+plugin.config_track.supported=true
+
 # Data purge Quartz Job
 hyperic.hq.dataPurge=org.hyperic.hq.measurement.DataPurgeJob
 
