Include .hbm.xml files in the installer.

--- a/build.xml
+++ b/build.xml
@@ -1332,9 +1332,11 @@
         <include name="hibernate/hibernate*"/>
       </fileset>
     </copy>
+
     <copy todir="${installer.dir}/etc/hibernate">
      <fileset dir="${hq.home}">
         <include name="sql/**/*.hq-xml"/>
+        <include name="sql/**/*.hbm.xml"/>
       </fileset>
     </copy>
 
