Use SingletonEhCacheProvider so we can use a single cache provider for caches outside of Hibernate.

--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -15,7 +15,7 @@ hibernate.util.interceptor_class=org.hyperic.hibernate.HypericInterceptor
 #
 hibernate.cache.use_query_cache=no
 hibernate.cache.use_second_level_cache=true
-hibernate.cache.provider_class=net.sf.ehcache.hibernate.EhCacheProvider
+hibernate.cache.provider_class=net.sf.ehcache.hibernate.SingletonEhCacheProvider
 
 hibernate.max_fetch_depth=1
 hibernate.default_batch_fetch_size=8
